--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
       };
 
       const fetchWithKey = async (url, keyIndex) => {
-        const VERCEL_API_URL = 'https://your-project.vercel.app/api/youtube'; // Replace with your Vercel API URL
-        const SECRET_KEY = 'YOUR_SECRET_KEY'; // Replace with your secret key
+        const VERCEL_API_URL = 'https://youtube-recommender-flame.vercel.app/api/youtube'; // Replace with your Vercel API URL
+        const SECRET_KEY = 'Vladivostock786'; // Replace with your secret key
         const response = await fetch(`${VERCEL_API_URL}?${url}&key=${SECRET_KEY}`);
         const data = await response.json();
         if (!response.ok) {
